syntax = "proto3";

package message;

message KRB_AS_Request {
  string UserPrincipal = 1;
  uint64 Lifetime = 3;
  repeated string IP_List = 4;
}

message KRB_AS_Response {
  bytes TGT = 1;
  bytes CT = 2;
}

message KRB_TGS_Request {
  string SVCPrincipal = 1;
  uint64 Lifetime = 2;
  bytes Authenticator = 3;
  bytes TGT = 4;
}

message KRB_TGS_Response {
  bytes ST = 1;
  bytes CT = 2;
}

message KDCMessage {
  oneof M {
    KRB_AS_Request ASReq = 1;
    KRB_TGS_Request TGSReq = 2;
  }
}

message SPN_Request {
  string SVC_Addr = 1;
}

message SPN_Response {
  string SPN = 1;
}

message AP_Request {
  bytes Authenticator = 1;
  bytes ST = 2;
  bytes REQ = 3;
}

message AP_Response {
  bytes RES = 1;
}

message SVCMessage {
  oneof M {
    SPN_Request SPNReq = 1;
    AP_Request APReq  = 2;
  }	
}

